update swaggo documentation
