# models/user.go
@@ -23,7 +23,7 @@ type User struct {
 	RoleID    uint      `gorm:"not null" json:"-"`
 	Role      Role      `gorm:"foreignKey:RoleID;default:1;" json:"-"`
 	Profiles  []Profile `gorm:"foreignKey:UserID;constraint:onDelete:CASCADE" json:"profiles,omitempty"`
-	Reviews   []Review  `gorm:"foreignKey:UserID" json:"-"`
+	Reviews   []Review  `gorm:"foreignKey:UserID" json:"reviews,omitempty"`
 	Comments  []Comment `gorm:"foreignKey:UserID" json:"-"`
 }
 
